# hdl_localization_test

./: README.md
hdl_localization/launch/: hdl_localization.launch
robotnik_sensors/meshes/: intel_d435.dae  intel_d435.stl  orbbec_astra_embedded_s.dae  pilz_psen.stl  rs_bpearl.dae  (+4 more)
summit_package/: CMakeLists.txt  package.xml
summit_package/config/: robot_control.yaml
summit_package/launch/: summit_xls_gazebo.launch
summit_package/meshes/: mount.STL
summit_package/robots/: summit_xl_gen_std.urdf.xacro  summit_xl_std.urdf.xacro  summit_xl_tix_std.urdf.xacro  summit_xls_lidar_front.urdf.xacro  summit_xls_lidar_rear.urdf.xacro
summit_package/robots/versions/: summit_xl_gen_j2s6s200.urdf.xacro  summit_xl_gen_j2s7s300.urdf.xacro
summit_package/urdf/: mount.urdf.xacro
summit_package/urdf/bases/: summit_x_base.urdf.xacro  summit_xl_base.gazebo.xacro  summit_xl_base.urdf.xacro  summit_xl_hl_base.urdf.xacro  summit_xl_hl_ext_base.urdf.xacro  summit_xl_hls_base.urdf.xacro  summit_xls_base.urdf.xacro  summit_xlsk_base_plus.urdf.xacro
summit_package/urdf/structures/: d435.urdf.xacro  roas.urdf.xacro  sick_microscan3_support.urdf.xacro  structure_chair.urdf.xacro  structure_chasis_sup_our.urdf.xacro  structure_front_axis_sick.urdf.xacro  structure_gps.urdf.xacro  structure_hokuyo.urdf.xacro  structure_ptz_rgbd_gps.urdf.xacro  structure_rear_axis.urdf.xacro  structure_rear_sick.urdf.xacro  structure_rear_velodyne.urdf.xacro  tim571.urdf.xacro
summit_package/urdf/wheels/: omni_wheel.urdf.xacro  rubber_wheel.urdf.xacro
summit_package/world/: empty_world.world
(+19 files in other folders)
